--- a/src/app/components/loginForm/loginForm.module.scss
+++ b/src/app/components/loginForm/loginForm.module.scss
@@ -1,3 +1,23 @@
+
+.header {
+  text-align: center;
+  margin-bottom: 48px;
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.33;
+  color: #2B3844;
+}
+
+.link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1;
+
+  cursor: pointer;
+  text-decoration: none;
+}
+
 .form {
     margin-bottom: 32px;
 
