--- a/src/app/components/inputForm/InputForm.module.scss
+++ b/src/app/components/inputForm/InputForm.module.scss
@@ -2,12 +2,14 @@
   width: 100%;
   height: 46px;
   line-height: 46px;
-  border: 1px solid #354352;
-  opacity: 0.3;
+  border: 1px solid rgba(#354352, 0.3);
   border-radius: 3px;
   padding-left: 16px;
   padding-right: 16px;
+
   color: #000;
+  font-weight: 400;
+  font-size: 14px;
 
   &::placeholder {
     color: #2B3844;
@@ -19,13 +21,19 @@
     display: flex;
     flex-direction: column;
     row-gap: 8px;
+
+    font-size: 12px;
+    font-weight: 400;
+  }
+
+  &__error {
+    margin-top: -7px;
+    color: red;
   }
 
 }
 
 .label {
-  font-weight: 400;
-  font-size: 12px;
   line-height: 1;
   color: #2B3844;
 }
