--- a/src/app/components/login/Login.module.scss
+++ b/src/app/components/login/Login.module.scss
@@ -1,17 +1,56 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
-//font-family: 'Inter', sans-serif;
-
-.login__wrapper {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 .login {
   width: 380px;
-  font-family: 'Inter', sans-serif;
+  line-height: 1;
+
+  &__wrapper {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__header {
+    text-align: center;
+    margin-bottom: 48px;
+
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.33;
+  }
+
 
   p {
+    font-size: 14px;
+    font-weight: 500;
     text-align: center;
   }
+
+  &__link {
+    color: #5382E7;
+    cursor: pointer;
+    text-decoration: none;
+  }
+}
+
+
+.form {
+  margin-bottom: 32px;
+
+  &__wrapper {
+    display: flex;
+    column-gap: 16px;
+  }
+
+  &__btn {
+    margin-top: 40px;
+    width: 100%;
+    padding-top: 19px;
+    padding-bottom: 19px;
+    background-color: #5382E7;
+    border-radius: 3px;
+
+    color: #fff;
+    font-weight: 500;
+  }
+
 }
