--- a/src/app/components/menu/Menu.module.scss
+++ b/src/app/components/menu/Menu.module.scss
@@ -59,13 +59,16 @@
       text-decoration: none;
       color: #5382E7;
 
+      & * {
+        transition:
+        stroke 0.3s ease-in,
+        opacity 0.3s ease-in;
+      }
+
       transition:
-              background-color 0.3s ease-in,
+              background-color 0.2s ease-in,
               color 0.3s ease-in,
-              border-right 0.2s ease-in,
-              stroke 0.3s ease-in,
-              opacity 0.3s ease-in
-     ;
+              border-right 0.2s ease-in;
 
         & * {
           stroke: #5382E7;
