--- a/src/app/components/layout/Layout.module.scss
+++ b/src/app/components/layout/Layout.module.scss
@@ -46,6 +46,11 @@
       font-size: 14px;
     }
 
+    &_add {
+      width: 16px;
+      height: 20px;
+    }
+
     &:hover {
       background-color: #2B3844;
     }
