--- a/src/app/components/login/Login.module.scss
+++ b/src/app/components/login/Login.module.scss
@@ -33,24 +33,24 @@
 }
 
 
-.form {
-  margin-bottom: 32px;
-
-  &__wrapper {
-    display: flex;
-    column-gap: 16px;
-  }
-
-  &__btn {
-    margin-top: 40px;
-    width: 100%;
-    padding-top: 19px;
-    padding-bottom: 19px;
-    background-color: #5382E7;
-    border-radius: 3px;
-
-    color: #fff;
-    font-weight: 500;
-  }
-
-}
+//.form {
+//  margin-bottom: 32px;
+//
+//  &__wrapper {
+//    display: flex;
+//    column-gap: 16px;
+//  }
+//
+//  &__btn {
+//    margin-top: 40px;
+//    width: 100%;
+//    padding-top: 19px;
+//    padding-bottom: 19px;
+//    background-color: #5382E7;
+//    border-radius: 3px;
+//
+//    color: #fff;
+//    font-weight: 500;
+//  }
+//
+//}
