--- a/src/app/components/table/Table.module.scss
+++ b/src/app/components/table/Table.module.scss
@@ -27,9 +27,18 @@ td {
   padding-bottom: 20px;
   font-weight: 400;
   font-size: 13px;
-  line-height: 0.92;
+  line-height: 1.07;
   color: #2B3844;
   opacity: 0.7;
+
+  a {
+    color: #5382E7;
+    transition: color 0.3s ease-in;
+
+    &:hover {
+      color: #0c2f7c;
+    }
+  }
 
 }
 
