--- a/src/app/components/pages/personal/Personal.module.scss
+++ b/src/app/components/pages/personal/Personal.module.scss
@@ -2,7 +2,7 @@
   padding-top: 53px;
   width: 792px;
 
-  border-top: 1px solid rgba(43, 56, 68, 0.08);;
+  border-top: 1px solid rgba(43, 56, 68, 0.08);
 
   &__wrapper {
     display: flex;
