--- a/src/app/components/pages/main/Main.module.scss
+++ b/src/app/components/pages/main/Main.module.scss
@@ -6,12 +6,25 @@
   display: flex;
   justify-content: space-between;
 
+  &__column {
+
+  }
+
   &__day {
      width: 455px;
+     padding: 32px 32px 0;
+     margin-right: 24px;
+     background-color: #fff;
+
+    &:first-child {
+      margin-bottom: 24px;
+    }
   }
 
   &__overview {
-     width: 735px;
+     width: 68.5%;
+    padding-top: 32px;
+    background-color: #fff;
   }
 
 }
